...
    val scope = rememberCoroutineScope()

    Scaffold(
        containerColor = Color(0xFFF5F5DC), // Beige
        floatingActionButton = {
            FloatingActionButton(
                modifier = Modifier.testTag("AddNoteButton"), //1)related to Espresso
                onClick = {
                    navController.navigate(Screen.AddEditNoteScreen.route)
                },
                containerColor = Color(0xFF8BAE66)
            ) {
                Icon(
...
            Row(
                modifier = Modifier.fillMaxWidth(),
                horizontalArrangement = Arrangement.SpaceBetween,
                verticalAlignment = Alignment.CenterVertically
            ) {
                Text(
                    text = "Your Notes",
                    style = MaterialTheme.typography.titleLarge,
                    fontWeight = FontWeight.Bold,
                    color = Color.Black
                )

                IconButton(
...
